sample-app-config/sample-app-networkpolicy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ci-to-namespace
  namespace: sample-app
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            app.kubernetes.io/instance: sample-app-ci
        podSelector: {}
...
